syntax = "proto3";

package user;
option go_package = "userservice/pkg/gen";

import "github.com/haqury/helpy/common.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

// Пользователь
message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  string status = 5; // active, inactive, banned
  int64 created_at = 6;
  int64 updated_at = 7;
  bool is_active = 12; // активен ли пользователь
  repeated string roles = 13; // роли пользователя (admin, premium, user, etc.)
  string subscription_tier = 14; // тариф (free, basic, premium)
  string region = 15; // регион пользователя для роутинга
  
  // Настройки пользователя
  message UserSettings {
    string default_quality = 1;
    int32 max_parallel_streams = 2;
    bool auto_start_recording = 3;
    bool notifications_enabled = 4;
    string timezone = 5;
    string language = 6;
  }
  
  // Конфигурация стриминга
  message StreamingConfig {
    string server_url = 1; // адрес video-service
    int32 server_port = 2; // порт video-service
    bool use_ssl = 3; // использовать SSL
    string api_key = 4; // API ключ для аутентификации
    string stream_endpoint = 5; // endpoint для стрима (например "/stream")
    int32 max_bitrate = 7; // максимальный битрейт
    int32 max_resolution = 8; // максимальное разрешение
    string codec = 10; // кодек (например "h264")
  }
  
  // Статистика пользователя
  message UserStats {
    int64 total_streams = 1;
    int64 total_duration = 2; // в секундах
    int64 total_storage_used = 3; // в байтах
    int64 current_streams = 4;
    int32 successful_logins = 5;
    int32 failed_logins = 6;
    int64 last_login = 7;
    int64 last_activity = 8;
  }
  
  UserSettings settings = 8;
  StreamingConfig streaming_config = 9;
  UserStats stats = 10;
  map<string, string> metadata = 11;
}

// Запросы
message GetUserRequest {
  string user_id = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByClientIdRequest {
  string client_id = 1;
}

message GetUserByClientIdResponse {
  string user_id = 1;
  string username = 2;
  bool is_active = 3;
  repeated string roles = 4;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
}

message UpdateUserRequest {
  string user_id = 1;
  User user = 2;
}

message DeleteUserRequest {
  string user_id = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  string filter = 3;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 total_pages = 4;
}

// Аутентификация
message LoginRequest {
  string username = 1;
  string password = 2;
  string client_info = 3; // JSON с информацией о клиенте
}

message LoginResponse {
  string token = 1;
  User user = 2;
  int64 expires_at = 3;
  string refresh_token = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  User user = 2;
  string message = 3;
}

// Получение конфигурации стриминга
message GetStreamingConfigRequest {
  string user_id = 1;
  string client_id = 2;
}

// Сервис пользователей
service UserService {
  // Базовые операции с пользователями
  rpc GetUser(GetUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/api/v1/users/{user_id}"
    };
  }

  rpc GetUserByUsername(GetUserByUsernameRequest) returns (User) {
    option (google.api.http) = {
      get: "/api/v1/users/by-username/{username}"
    };
  }

  rpc GetUserByClientId(GetUserByClientIdRequest) returns (GetUserByClientIdResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/by-client/{client_id}"
    };
  }

  rpc CreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/api/v1/users"
      body: "*"
    };
  }

  rpc UpdateUser(UpdateUserRequest) returns (User) {
    option (google.api.http) = {
      put: "/api/v1/users/{user_id}"
      body: "*"
    };
  }

  rpc DeleteUser(DeleteUserRequest) returns (common.ApiResponse) {
    option (google.api.http) = {
      delete: "/api/v1/users/{user_id}"
    };
  }

  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      get: "/api/v1/users"
    };
  }

  // Аутентификация
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/login"
      body: "*"
    };
  }

  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/validate"
      body: "*"
    };
  }

  rpc Logout(google.protobuf.Empty) returns (common.ApiResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/logout"
    };
  }

  // Конфигурация стриминга
  rpc GetStreamingConfig(GetStreamingConfigRequest) returns (User.StreamingConfig) {
    option (google.api.http) = {
      get: "/api/v1/streaming/config"
    };
  }

  rpc UpdateStreamingConfig(UpdateUserRequest) returns (User.StreamingConfig) {
    option (google.api.http) = {
      put: "/api/v1/streaming/config/{user_id}"
      body: "*"
    };
  }

  // Статистика
  rpc UpdateUserStats(UpdateUserRequest) returns (common.ApiResponse) {
    option (google.api.http) = {
      put: "/api/v1/users/{user_id}/stats"
      body: "*"
    };
  }

  rpc GetUserStats(GetUserRequest) returns (User.UserStats) {
    option (google.api.http) = {
      get: "/api/v1/users/{user_id}/stats"
    };
  }
}
